ci(release): add provenance and release environment
Enable npm package provenance and configure release workflow to use dedicated environment

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
 		"url": "https://github.com/shubhamsinha/better-shop.git"
 	},
 	"publishConfig": {
-		"access": "public"
+		"access": "public",
+		"provenance": true
 	},
 	"lint-staged": {
 		"**/*.{ts,tsx}": [
