--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 	],
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/shubhamsinha/better-shop.git"
+		"url": "git+https://github.com/peppyhop/better-shop.git"
 	},
 	"publishConfig": {
 		"access": "public",
